<resources>
    <string name="skylinuav_url">http://www.skylinuav.com/</string>
    <string name="app_language_pref_key" translatable="false">app_language_pref_key</string>
    <string name="APPNAME">天麒服务</string>
    <string name="setting_language_auto">跟随系统</string>
    <string name="setting_language_english">English</string>
    <string name="setting_simplified_chinese">简体中文</string>
    <string name="setting_traditional_chinese">繁體中文</string>
    <string name="no_connectivity">No connectivity</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="try_again">Try Again</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_phone">新手机号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_newpassword">新密码</string>
    <string name="prompt_validnum">验证码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_getvalidnum">获取验证码</string>
    <string name="registacount">注册</string>
    <string name="login_tv_forggotpwd">忘记密码</string>
    <string name="error_login_failed_account_pwd_not_thesame">账号或用户名错误</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_regist_account">注册新账号</string>
    <string name="title_activity_regist_btn_title">注册</string>
    <string name="title_activity_regist_tips">密码6-10位,包含字母和数字组合</string>
    <string name="title_activity_regist_btn_content">提交</string>
    <string name="title_activity_error_phoneformat">电话格式错误</string>
    <string name="title_activity_error_pwdformat">密码格式错误</string>
    <string name="activity_forggot_title">忘记密码</string>
    <string name="activity_forggot_btn_content">提交</string>
    <string name="activity_changephone_title">修改手机</string>
    <string name="activity_changephone_origial_phonevalid">原验证码</string>
    <string name="setting_activity_title">设置</string>
    <string name="setting_activity_dialog_titile">修改昵称</string>
    <string name="setting_activity_dialog_key">昵称</string>
    <string name="setting_activity_dialog_savebtn">保存</string>
    <string name="setting_activity_dialog_edit_hint">请输入昵称</string>
    <string name="setting_activity_about">关于</string>
    <string name="main_activity_devicemanager_title">我的设备</string>
    <string name="main_activity_devicemanager_menu_title">添加</string>
    <string name="main_activity_devicemanager_item_fly_name">名称</string>
    <string name="main_activity_devicemanager_item_sn">SN</string>
    <string name="main_activity_devicemanager_item_product_date">生产</string>
    <string name="main_activity_devicemanager_item_fly_type">型号</string>
    <string name="main_activity_devicemanager_item_control_center_id">飞控ID</string>
    <string name="main_activity_devicemanager_item_regist_date">注册</string>
    <string name="main_activity_devicemanager_dialog_tips">您正在注销设备,请输入完整手机号确认</string>
    <string name="main_activity_devicemanager_dialog_btn_name">注销</string>
    <string name="activity_scan_menu_one">手动添加</string>
    <string name="activity_scan_title">扫描</string>
    <string name="activity_manuel_scan_menu_one">扫描</string>
    <string name="activity_manuel_title">手动添加</string>
    <string name="activity_manuel_prompt_sn">设备SN</string>
    <string name="activity_manuel_prompt_activtednum">激活码</string>
    <string name="activity_manuel_prompt_tips">注意事项</string>
    <string name="activity_manuel_prompt_btn_name">绑定</string>
    <string name="activity_teammanager_title">团队管理</string>
    <string name="activity_teammanager_btn_createteam">创建团队</string>
    <string name="activity_teammanager_btn_createteam_teamname_hints">团队名称</string>
    <string name="activity_teammanager_btn_createteam_defaultday_hints">有效期(天)</string>
    <string name="activity_teammanager_btn_createteam_tips">超过有效期后将重新登录,默认为1天</string>
    <string name="activity_teammanager_btn_createteam_btn_name">确认</string>
    <string name="activity_teammanager_create_title">创建团队</string>
    <string name="activity_teammanager_teamlist_title">飞行小分队</string>
    <string name="activity_teammanager_teamlist_btn_inveite">邀请成员</string>
    <string name="activity_teammanager_teamlist_menu_name">编辑</string>
    <string name="activity_teammanager_teaminvte">编辑</string>
    <string name="activity_teammanager_teaminvte_titel">邀请成员</string>
    <string name="activity_teammanager_teaminvte_hint_skylinaccount">天麒账号或手机号</string>
    <string name="activity_teammanager_teaminvte_hint_beizhu">备注</string>
    <string name="activity_teammanager_teaminvte_btn_name">邀请</string>
    <string name="activity_teammanager_menu_one">编辑</string>
    <string name="activity_teammanager_teamchange_title">修改成员</string>
    <string name="activity_teammanager_teamchange_btn_name">修改</string>
    <string name="activity_teammanager_teamchange_btn__delete_name">删除</string>
    <string name="activity_teammanager_edit_title">编辑团队</string>
    <string name="activity_softcenter_title">应用中心</string>
    <string name="activity_softcenter_menu_title">全部下载</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_scan">扫描</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="app_name">日期选择控件</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="DeviceManagerActivity_tv1">植保机</string>
    <string name="DeviceManagerActivity_tv2">基准站</string>
    <string name="DeviceManagerActivity_tv3">无法连接到网络</string>
    <string name="DeviceManagerActivity_tv4">连接异常，请重试</string>
    <string name="DeviceManagerActivity_tv5">设备详情</string>
    <string name="DeviceManagerActivity_tv6">未安装固件中心,请到天麒服务下载该软件</string>
    <string name="DeviceManagerActivity_tv7">设备名 </string>
    <string name="DeviceManagerActivity_tv8">生产日期</string>
    <string name="DeviceManagerActivity_tv9">注册日期</string>
    <string name="DeviceManagerActivity_tv10">打开固件中心</string>
    <string name="DeviceManagerActivity_tv11">注销设备</string>
    <string name="DeviceManagerActivity_tv12">注销设备后所有成员不可操作此设备,但该指令仅在成员下次联网是生效</string>
    <string name="DeviceManagerActivity_tv13">解绑设备</string>
    <string name="DeviceManagerActivity_tv14">绑定成功</string>
    <string name="DeviceManagerActivity_tv15">扫码无效,请重新扫描</string>
    <string name="DeviceManagerActivity_tv16">打开手电筒</string>
    <string name="DeviceManagerActivity_tv17">关闭手电筒</string>
    <string name="DeviceManagerActivity_tv18">将条码放入框内，即可自动扫描</string>
    <string name="DeviceManagerActivity_tv19">请扫描激活卡上的二维码</string>
    <string name="DeviceManagerActivity_tv20">开始识别</string>
    <string name="DeviceManagerActivity_tv21">暂停识别</string>
    <string name="DeviceManagerActivity_tv22">开灯</string>
    <string name="DeviceManagerActivity_tv23">解绑成功</string>
    <string name="DeviceManagerActivity_tv24">验证码已发送</string>
    <string name="DeviceManagerActivity_tv25">注销设备</string>
    <string name="DeviceManagerActivity_tv26">确认注销</string>
    <string name="DeviceManagerActivity_tv27">注销后成员不可操作此设备，但该指令仅在成员下次联网时生效</string>
    <string name="DeviceManagerActivity_tv28">注册的手机号</string>
    <string name="DeviceManagerActivity_tv29">授权界面</string>
    <string name="MacLIstActivity_tv1">团队拥有飞机列表</string>
    <string name="MacLIstActivity_tv2">暂无可操控飞机</string>
    <string name="MainActivity_tv1">实名认证</string>
    <string name="MainActivity_tv2">更新</string>
    <string name="MainActivity_tv3">有新版本的天麒服务,是否下载?</string>
    <string name="MainActivity_tv4">当前已经是最新版本</string>
    <string name="MainActivity_tv5">是</string>
    <string name="MainActivity_tv6">请到设置界面打开权限</string>
    <string name="MainActivity_tv7">否</string>
    <string name="MainActivity_tv8">获取APP信息失败</string>
    <string name="MainActivity_tv9">请先通过实名认证</string>
    <string name="MainActivity_tv10">已通过实名认证</string>
    <string name="MainActivity_tv11">未通过实名认证</string>
    <string name="MainActivity_tv12">应用中心</string>
    <string name="MainActivity_tv13">我的设备</string>
    <string name="MainActivity_tv14">个人中心</string>
    <string name="MainActivity_tv15">团队管理</string>
    <string name="MainActivity_tv16">管理您的作业团队</string>
    <string name="MainActivity_tv17">再按一次退出</string>
    <string name="MainActivity_tv18">您有</string>
    <string name="MainActivity_tv19">个应用未安装</string>
    <string name="MainActivity_tv20">个应用未更新</string>
    <string name="MainActivity_tv21">绑定了</string>
    <string name="MainActivity_tv22">个设备</string>
    <string name="MainActivity_tv23">早上好</string>
    <string name="DateChooseActivity_tv4">全部</string>
    <string name="DateChooseActivity_tv5">今日</string>
    <string name="DateChooseActivity_tv6">昨日</string>
    <string name="DateChooseActivity_tv7">近七天</string>
    <string name="DateChooseActivity_tv8">近15天</string>
    <string name="DateChooseActivity_tv9">近30天</string>
    <string name="DateChooseActivity_tv10">到</string>
</resources>