<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="无人机选择" />

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dip"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/time_all"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/DateChooseActivity_tv4"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/time_1"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/DateChooseActivity_tv5"

            android:textSize="12sp" />

        <TextView
            android:id="@+id/time_2"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/DateChooseActivity_tv6"

            android:textSize="12sp" />

        <TextView
            android:id="@+id/time_7"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/DateChooseActivity_tv7"

            android:textSize="12sp" />

        <TextView
            android:id="@+id/time_15"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/DateChooseActivity_tv8"

            android:textSize="12sp" />


        <TextView
            android:id="@+id/time_30"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/DateChooseActivity_tv9"
            android:textSize="12sp" />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="30dip">

        <EditText
            android:id="@+id/timefrome"
            android:layout_width="120dip"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/DateChooseActivity_tv10"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/timeto"
            android:layout_width="120dip"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dip"
        android:background="@color/color1"
        android:gravity="center_vertical"
        android:labelFor="@+id/app_bar_layout"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/select_date"
            android:textColor="@color/color3"
            android:textSize="15sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/selectDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color2"
        android:gravity="center_vertical"

        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/current_date"
            android:textColor="@color/color4"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/currentDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="center"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:textColor="@color/color5"
            android:textSize="15sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color1"

        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/select_time"
            android:textColor="@color/color3"
            android:textSize="15sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/selectTime"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color2"
        android:gravity="center_vertical"

        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/current_time"
            android:textColor="@color/color4"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="center"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:textColor="@color/color5"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>
