<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">


    <TextView
        android:id="@+id/edit_nickname_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_marginTop="30dip"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/setting_activity_dialog_titile"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_nickname_dialog_title"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="30dip"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/edit_nickname_dialog_key"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/setting_activity_dialog_key"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_nickname_dialog_edittv"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@android:color/white"
            android:gravity="start|center_vertical"
            android:hint="@string/setting_activity_dialog_edit_hint"
            android:maxLength="11"
            android:textColor="@android:color/black"
            android:textSize="14sp" />


    </LinearLayout>

    <Button
        android:id="@+id/edit_nickname_dialog_savebtn"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:background="@drawable/selector_green_bg_nocorner"
        android:enabled="false"
        android:text="@string/setting_activity_dialog_savebtn"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


</RelativeLayout>
