<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.set.changenick.ChangeNickNameActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_activity_regist_account" />

    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/nickname_til"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_below="@+id/app_bar_layout"
        android:layout_margin="20dip"
        android:layout_marginTop="20dip">

        <AutoCompleteTextView

            android:id="@+id/nickname_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/setting_activity_dialog_key"
            android:inputType="text"
            android:maxLength="15"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/change_nick"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_110"
        android:layout_alignParentBottom="true"
        android:background="@drawable/selector_green_bg_nocorner"
        android:enabled="false"
        android:text="@string/activity_teammanager_btn_createteam_btn_name"
        android:textColor="@color/white" />

</RelativeLayout>
